--- a/main.tex
+++ b/main.tex
@@ -1854,3 +1854,4 @@ Therefore we need at least three further functions, that filter irrelevant clust
 \bibliographystyle{splncs04}
 \bibliography{bibliography}{}
 \end{document}
+xxxxx
