--- a/main.tex
+++ b/main.tex
@@ -598,7 +598,7 @@ Firstly, the dimension reduction aggregates the file system and the node dimensi
 Secondly, the mean values are quantized into 16 levels -- 0 represents the interval [0,0.125), 1 [0.125,0.375), $ \ldots $ , f [3.625, 4].
 The example below shows hexadecimal coding for a job containing 6 segments.
 
-\begin{tabular}[ll]
+\begin{tabular}{ll}
 md\_file\_create & [0:0:\textbf{2}:\textbf{2}:\textbf{2}:\textbf{9}] \\
 md\_file\_delete & [0:0:0:0:0:0] \\
 md\_mod           &  [0:0:0:0:0:0] \\
