--- a/bibliography.bib
+++ b/bibliography.bib
@@ -81,7 +81,7 @@ IEEEtran homepage
 	location	 = {Frankfurt, Germany},
 	isbn	 = {978-3-030-02465-9},
 	issn	 = {1611-3349},
-	doi	 = \url{https://doi.org/10.1007/978-3-030-02465-9_4},
+	doi	 = {\url{https://doi.org/10.1007/978-3-030-02465-9_4}},
 	abstract	 = {Parallel application I/O performance often does not meet user expectations. Additionally, slight access pattern modifications may lead to significant changes in performance due to complex interactions between hardware and software. These issues call for sophisticated tools to capture, analyze, understand, and tune application I/O. In this paper, we highlight advances in monitoring tools to help address these issues. We also describe best practices, identify issues in measure- ment and analysis, and provide practical approaches to translate parallel I/O analysis into actionable outcomes for users, facility operators, and researchers.},
 }
 
@@ -1305,6 +1305,3 @@ year = {2019}
   author={Michael Gienger},
   year={2017}
 }
-
-
-
